# ani-property

./: LICENSE  README.md  pyproject.toml
examples/: changing_the_text_color_of_label.py  install.py  magnet.py  moving_a_widget_toward_the_point_where_user_tapped.py  not_recommended_but_works.py
src/: ani_property.py
tests/: test_all.py
